--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                             <h4>Hỗ trợ kỹ thuật:</h4>
                             <p>
                                 Nếu gặp khó khăn trong quá trình đăng ký hoặc sử dụng, vui lòng liên hệ với chúng tôi qua
-                                <a href="https://t.me/saitama_b" target="_blank">
+                                <a href="https://t.me/Bug_Busters12" target="_blank">
                                     Telegram
                                     <i class="fas fa-external-link-alt"></i>
                                 </a>
@@ -389,3 +389,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
